Fix member reach tooltip height/overflow (#235)

--- a/frontend/src/assets/scss/popover.scss
+++ b/frontend/src/assets/scss/popover.scss
@@ -2,6 +2,10 @@
   --el-box-shadow-light: 0px 2px 4px rgba(0, 0, 0, 0.25);
 }
 
+.el-popper.is-dark, .el-popper.is-light {
+  @apply min-h-6 h-auto;
+}
+
 .el-popper.is-light {
   @apply border-none;
 }
